# t-trading

./: .gitignore  analysis_framework.py  database.py  engine.py  llm_service.py  main.py  models.py  pyproject.toml  realtime_stock_data.py  setting.py  stock_analysis_result.json  项目需求.md
.trae/documents/: 优化全量股票分析效率.md  优化多股股票分析效率.md  修复批量分析所有股票时的错误.md  添加分批写入JSON文件功能.md  添加股票分析进度显示功能.md
